--- a/views/css/objects.css
+++ b/views/css/objects.css
@@ -23,6 +23,7 @@
   background: #FFFFFF;
   border: #DFDFDF solid 2px;
   display: inline-block;
+  margin: 10px;
   padding: 10px;
 }
 
